Changed domain folder and renamed MapManager